--- a/publications.html
+++ b/publications.html
@@ -186,7 +186,15 @@
   year={2026},
   publisher={Elsevier}
 }
-  
+
+  @article{hussain2026quality,
+  title={Quality over quantity: a data-centric survey of annotation errors in object detection datasets},
+  author={Hussain, Adnan and Ullah, Kaleem and Afaq, Muhammad and Munsif, Muhammad and Hussain, Altaf and Baik, Sung Wook},
+  journal={Artificial Intelligence Review},
+  year={2026},
+  publisher={Springer}
+}
+
 
 @article{yar2026novel,
   title={A novel deep learning framework for battery performance prediction over the operational lifespan},
@@ -356,3 +364,4 @@
 </body>
 
 </html>
+
