--- a/index.html
+++ b/index.html
@@ -334,7 +334,13 @@
                 <p class="service-item-text">Publisher: Elsevier</p>
                 <p class="service-item-text" style="color: #40E0D0">Journal: Pattern Recognition</p>
 
-		      
+
+				<h4 class="h4 service-item-title" ; style="color: #c8e500; font-size: 16">
+				Quality over quantity: a data-centric survey of annotation errors in object detection datasets</h4>
+                <p class="service-item-text">Authors: Adnan Hussain, Kaleem Ullah, Muhammad Afaq, Muhammad Munsif, Altaf Hussain, Sung Wook Baik</p>
+                <p class="service-item-text">Volume: 000</p>
+                <p class="service-item-text">Publisher: Springer</p>
+                <p class="service-item-text" style="color: #40E0D0">Journal: Artificial Intelligence Review</p>
 				  
                 <h4 class="h4 service-item-title" ; style="color: #c8e500; font-size: 16">
 					Edge-Assisted Framework for Instant Anomaly Detection and Cloud-Based Anomaly Recognition in Smart Surveillance</h4>
